--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 
         <hr>
 
+        <h2>🛡️ ギルド運営 - アクション</h2>
+        <div class="controls" id="action-controls">
+            <button onclick="autoAssignQuests()">ランダムに任務を割り当て</button>
+        </div>
+        <hr>
+
         <h2>🛡️ ギルド管理 - スカウト</h2>
         <div class="controls" id="scout-controls">
             <button onclick="scoutAdventurers('immediate')">即戦力重視 (5 万G)</button> 
