--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div>
                     <button onclick="showSaveLoadModal('save')">セーブ</button>
                     <button onclick="showSaveLoadModal('load')">ロード</button>
-                    <button onclick="nextMonth()" class="next-month-button">▶️ Next Month</button>
+                    <button id="next-month-button" onclick="nextMonth()" class="next-month-button">▶️ Next Month</button>
                 </div>
             </div>
             
@@ -56,9 +56,9 @@
             <div id="scout-section">
                 <h2>🛡️ ギルド管理 - スカウト</h2>
                 <div class="controls" id="scout-controls">
-                    <button onclick="scoutAdventurers('immediate')">即戦力重視 (5 万G)</button> 
-                    <button onclick="scoutAdventurers('growth')">成長重視 (5 万G)</button> 
-                    <button onclick="scoutAdventurers('focused')">集中スカウト (30 万G)</button>
+                    <button onclick="scoutAdventurers('immediate')">即戦力重視 (100 万G)</button> 
+                    <button onclick="scoutAdventurers('growth')">成長重視 (100 万G)</button> 
+                    <button onclick="scoutAdventurers('focused')">集中スカウト (300 万G)</button>
                 </div>
             </div>
             <hr>
