--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ギルドソウル V2.0.0β</title>
+    <title>Guild Soul</title>
     <link rel="icon" href="Sword.png">
     <link rel="stylesheet" href="style.css">
 </head>
